--- a/cv.html
+++ b/cv.html
@@ -5,31 +5,34 @@
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>Alistair Wilson's CV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container text-center">
         <div class="row">
           <div class="col-4 dark-col">
-            <div class="img"><img src="/army-wilson.jpg" title="Alistair Wilson" alt="It's called army wilson, beause my hair is so short it looks like an army official"></div>
-            <div class="name">
-                <h1>Alistair Wilson</h1>
-                <h3>Development Manager</h3>
-            </div>
-            <div class="education">
-                <h2>Education</h2>
-                <div>
-                    <h4>University of Manchester</h4>
-                    <p>BA (Hons) Philosophy, Politics, Economics (PPE)</p>
-                    <p>First Class Honours</p>
-                    <p>Sept. 2008-June 2011</p>
+            <div class="img"><img src="img/army-wilson.jpg" title="Alistair Wilson" alt="It's called army wilson, beause my hair is so short it looks like an army official"></div>
+            <div class="left-side">
+                <div class="name">
+                    <h1>Alistair Wilson</h1>
+                    <h3>Development Manager</h3>
                 </div>
-                <div>
-                    <h4>Tiffin Boys School</h4>
-                    <p>
-                    A levels: 3As<br>
-                    AS levels: 1B<br>
-                    GCSEs: 11 A-Bs</p>
-                    <p>Sept. 2000-June 2007</p>
+                <div class="education">
+                    <h2>Education</h2>
+                    <div>
+                        <h4>University of Manchester</h4>
+                        <p>BA (Hons) Philosophy, Politics, Economics (PPE)</p>
+                        <p>First Class Honours</p>
+                        <p>Sept. 2008-June 2011</p>
+                    </div>
+                    <div>
+                        <h4>Tiffin Boys School</h4>
+                        <p>
+                        A levels: 3As<br>
+                        AS levels: 1B<br>
+                        GCSEs: 11 A-Bs</p>
+                        <p>Sept. 2000-June 2007</p>
+                    </div>
                 </div>
             </div>
         </div>
