Added hobbies & contact

--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,7 @@
     <title>Alistair Wilson's CV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/10e8ec4c0d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container text-center">
@@ -19,19 +20,59 @@
                 </div>
                 <div class="education">
                     <h2>Education</h2>
-                    <div>
-                        <h4>University of Manchester</h4>
+                    <div class="uni">
+                        <h4><img src="img/first-class-honours-bigger.png">University of Manchester</h4>
                         <p>BA (Hons) Philosophy, Politics, Economics (PPE)</p>
                         <p>First Class Honours</p>
                         <p>Sept. 2008-June 2011</p>
                     </div>
-                    <div>
-                        <h4>Tiffin Boys School</h4>
+                    <div class="school">
+                        <h4><img src="img/backpack-icon.png">Tiffin Boys School</h4>
                         <p>
                         A levels: 3As<br>
                         AS levels: 1B<br>
                         GCSEs: 11 A-Bs</p>
                         <p>Sept. 2000-June 2007</p>
+                    </div>
+                </div>
+                <div class="hobbies">
+                    <h2>Hobbies</h2>
+                    <div class="grid text-center">
+                        <div class="g-col-3 hobbie">
+                            <img src="img/sounddesk icon.png"/>
+                            <p>Sound technician</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-sharp fa-solid fa-basketball"></i>
+                            <p>Basketball</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <img src="img/squash-icon.png"/>
+                            <p>Squash</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-solid fa-book-open"></i>
+                            <p>Reading</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact">
+                    <h2>Contact</h2>
+                    <div class="address">
+                        <i class="fa-solid fa-location-pin"></i>
+                        <p>
+                        67 Victoria Road,<br/>
+                        Manchester,<br/>
+                        M14 6BW
+                        </p>
+                    </div>
+                    <div class="tel">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>07703 820 262</p>
+                    </div>
+                    <div class="email">
+                        <i class="fa-solid fa-envelope"></i>
+                        <p>alistairwilson22@googlemail.com</p>
                     </div>
                 </div>
             </div>
