extra content added

--- a/cv.html
+++ b/cv.html
@@ -61,24 +61,189 @@
                     <div class="address">
                         <i class="fa-solid fa-location-pin"></i>
                         <p>
-                        67 Victoria Road,<br/>
-                        Manchester,<br/>
+                        67 Victoria Road<br/>
+                        Manchester<br/>
                         M14 6BW
                         </p>
                     </div>
                     <div class="tel">
                         <i class="fa-solid fa-phone"></i>
-                        <p>07703 820 262</p>
+                        <p><a href="tel:07703820262">07703 820 262</a></p>
                     </div>
                     <div class="email">
                         <i class="fa-solid fa-envelope"></i>
-                        <p>alistairwilson22@googlemail.com</p>
+                        <p><a href="mailto:alistairwilson22@googlemail.com">alistairwilson22@googlemail.com</a></p>
                     </div>
                 </div>
             </div>
         </div>
           <div class="col-8 light-col">
+            <div class="about-me">
+                <div class="section-header">
+                    <h2>About me</h2>
+                </div>
+                <div class="circle">
+                    <i class="fa-solid fa-circle-user"></i>
+                </div>
+                <div class="clear"></div>
+                <div>
 
+                    <p>
+                    Experienced DevOps project manager & developer.<br/>
+                    I’ve managed a range of software development and commercial projects across business departments including production, accounts, sales and marketing. I’ve been involved in projects from the earliest stages as conversations with stake holders and clients. I’ve then proceeded to deliver on all aspects of a project lifecycle including designing and specifying a feature, implementing the feature either with my own development skills or in collaboration with other developers and designers, testing and providing quality assurance, publishing changes live, documenting  changes, announcing feature releases, and providing teaching or training to clients.
+                    </p>
+                </div>
+            </div>
+            <div class="work-experience">
+                <div class="section-header">
+                    <h2>Work Experience</h2>
+                </div>
+                <div class="circle">
+                    <i class="fa-solid fa-briefcase"></i>
+                </div>
+                <div class="container job">
+                    <div class="row role">
+                        <div class="col-4 title">
+                            <p>Development Manager</p>
+                        </div>
+                        <div class="col-8 company">
+                            <p>Grafenia Operations Ltd</p>
+                        </div>
+                    </div>
+                    <div class="row summary">
+                        <div class="col-4 dates">
+                            <p>Nov. 2014-Present</p>
+                        </div>
+                        <div class="col-8 description">
+                            <p>Line manager for 2 departments:</p>
+                            <p>Dept 1. Project manager for 4-5 senior developers. Work is mostly improving a bespoke PHP-based intranet & CRM for a SAAS graphic design franchise network. Projects I’ve led and/or implemented include accounting integrations (eg Xero, Quickbooks & Business Central), courier integrations (eg DHL & TNT), as well as supplier integrations, business workflow automations, and UI designs to development.</p>
+                            <p>Dept 2. Team leader and mentor for 3-5 junior developers working on Wordpress development and support. In this role I’ve provided central support, training, and development implementation for Wordpress projects across a network of over 300 graphic design studios. Support & training work includes live in person and pre-recorded video sessions and training courses. Development work includes API integrations, theme and plugin customisations, and making UI mockups a reality.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container job">
+                    <div class="row role">
+                        <div class="col-4 title">
+                            <p>Systems Analyst</p>
+                        </div>
+                        <div class="col-8 company">
+                            <p>printing.com</p>
+                        </div>
+                    </div>
+                    <div class="row summary">
+                        <div class="col-4 dates">
+                            <p>June 2012-Nov. 2014</p>
+                        </div>
+                        <div class="col-8 description">
+                            <p>This company later became a brand of Grafenia. Working in a DevOps role as a project manager and QA for a team of 8 developers on intranet improvements. I created bespoke reports with data analysis and visualisation to understand our current position and help influence future development and commercial decisions.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container job">
+                    <div class="row role">
+                        <div class="col-4 title">
+                            <p>Report Editor</p>
+                        </div>
+                        <div class="col-8 company">
+                            <p>World Market Intelligence</p>
+                        </div>
+                    </div>
+                    <div class="row summary">
+                        <div class="col-4 dates">
+                            <p>Aug. 2011-June 2012</p>
+                        </div>
+                        <div class="col-8 description">
+                            <p>Editor and QA for financial marketing reports.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container job">
+                    <div class="row role">
+                        <div class="col-4 title">
+                            <p>Freelance Work</p>
+                        </div>
+                        <div class="col-8 company">
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="row summary">
+                        <div class="col-4 dates">
+                            <p>June 2007-Apr. 2011<br/>(mostly)</p>
+                        </div>
+                        <div class="col-8 description">
+                            <p>I've undertaken freelance roles for university and A level tutoring, guitar teaching, and sound desk training. I've acted as sound technician for videos and at conferences.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+                <div class="section-header">
+                    <h2>Skills</h2>
+                </div>
+                <div class="circle">
+                    <i class="fa-solid fa-award"></i>
+                </div>
+                <div class="clear"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6 skill">
+                            <div class="label one-line">
+                                <p>Wordpress</p>
+                            </div>
+                            <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+                                <div class="progress-bar" style="width: 95%"></div>
+                            </div>
+                        </div>
+                        <div class="col-6 skill">
+                            <div class="label one-line">
+                                <p>Python</p>
+                            </div>
+                            <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+                                <div class="progress-bar" style="width: 85%"></div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 skill">
+                            <div class="label one-line">
+                                <p>Training</p>
+                            </div>
+                            <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+                                <div class="progress-bar" style="width: 75%"></div>
+                            </div>
+                        </div>
+                        <div class="col-6 skill">
+                            <div class="label">
+                                <p>Tensorflow & ML</p>
+                            </div>
+                            <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+                                <div class="progress-bar" style="width: 70%"></div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 skill">
+                            <div class="label">
+                                <p>Project Management</p>
+                            </div>
+                            <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+                                <div class="progress-bar" style="width: 65%"></div>
+                            </div>
+                        </div>
+                        <div class="col-6 skill">
+                            <div class="label">
+                                <p>Software Development</p>
+                            </div>
+                            <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
+                                <div class="progress-bar" style="width: 75%"></div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
           </div>
         </div>
       </div>
