--- a/cv.html
+++ b/cv.html
@@ -36,6 +36,48 @@
                     </div>
                 </div>
                 <div class="hobbies">
+                    <h2>Languages</h2>
+                    <div class="grid text-center">
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-js"></i>
+                            <p>Javascript</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-php"></i>
+                            <p>PHP</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-python"></i>
+                            <p>Python</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-java"></i>
+                            <p>Java</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hobbies">
+                    <h2>Frameworks</h2>
+                    <div class="grid text-center">
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-vuejs"></i>
+                            <p>Vue</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-react"></i>
+                            <p>React</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-wordpress"></i>
+                            <p>Wordpress</p>
+                        </div>
+                        <div class="g-col-3 hobbie">
+                            <i class="fa-brands fa-laravel"></i>
+                            <p>Laravel</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hobbies">
                     <h2>Hobbies</h2>
                     <div class="grid text-center">
                         <div class="g-col-3 hobbie">
@@ -87,10 +129,8 @@
                 </div>
                 <div class="clear"></div>
                 <div>
-
                     <p>
-                    Experienced DevOps project manager & developer.<br/>
-                    I’ve managed a range of software development and commercial projects across business departments including production, accounts, sales and marketing. I’ve been involved in projects from the earliest stages as conversations with stake holders and clients. I’ve then proceeded to deliver on all aspects of a project lifecycle including designing and specifying a feature, implementing the feature either with my own development skills or in collaboration with other developers and designers, testing and providing quality assurance, publishing changes live, documenting  changes, announcing feature releases, and providing teaching or training to clients.
+                    With over a decade experience working in a DevOps role, as both a project manager and a developer, I have a broad range of skills and talents to bring to your team. During my career I’ve taken the lead and delivered on all stages of a project lifecycle, including design/specification, software construction, testing and customer training. I’ve simultaneous managed 2 developer departments, acting as a project manager primarily for one team and as lead developer primarily for the other. What I’m looking for in my next role is to solve interesting problems and sharpen my development skills in a collaborative working environment among people who care about code. If that’s you and you’re looking for someone hardworking, pro-active and committed to making your projects a success then I think we should talk. I hope you do too.
                     </p>
                 </div>
             </div>
@@ -107,7 +147,7 @@
                             <p>Development Manager</p>
                         </div>
                         <div class="col-8 company">
-                            <p>Grafenia Operations Ltd</p>
+                            <p>Software Circle plc</p>
                         </div>
                     </div>
                     <div class="row summary">
@@ -117,7 +157,8 @@
                         <div class="col-8 description">
                             <p>Line manager for 2 departments:</p>
                             <p>Dept 1. Project manager for 4-5 senior developers. Work is mostly improving a bespoke PHP-based intranet & CRM for a SAAS graphic design franchise network. Projects I’ve led and/or implemented include accounting integrations (eg Xero, Quickbooks & Business Central), courier integrations (eg DHL & TNT), as well as supplier integrations, business workflow automations, and UI designs to development.</p>
-                            <p>Dept 2. Team leader and mentor for 3-5 junior developers working on Wordpress development and support. In this role I’ve provided central support, training, and development implementation for Wordpress projects across a network of over 300 graphic design studios. Support & training work includes live in person and pre-recorded video sessions and training courses. Development work includes API integrations, theme and plugin customisations, and making UI mockups a reality.</p>
+                            <p>Dept 2. Team leader and senior developer for a team of 3-5 working on Wordpress, PHP & JS development. In this role I’ve provided central support, training, and development implementation for customer projects across a network of over 300 graphic design studios. Support & training work includes live in person and pre-recorded video sessions and training courses. Development work includes API integrations, theme and plugin customisations, and making UI mockups a reality.</p>
+                            <p>Other responsibilities include setting up workflow automations</p>
                         </div>
                     </div>
                 </div>
@@ -135,7 +176,7 @@
                             <p>June 2012-Nov. 2014</p>
                         </div>
                         <div class="col-8 description">
-                            <p>This company later became a brand of Grafenia. Working in a DevOps role as a project manager and QA for a team of 8 developers on intranet improvements. I created bespoke reports with data analysis and visualisation to understand our current position and help influence future development and commercial decisions.</p>
+                            <p>This company later became a brand of Software Circle plc, my job title also changed. Working in a DevOps role as a project manager and QA for a team of 8 developers on intranet improvements. I created bespoke reports with data analysis and visualisation to understand our current position and help influence future development and commercial decisions.</p>
                         </div>
                     </div>
                 </div>
@@ -188,34 +229,34 @@
                     <div class="row">
                         <div class="col-6 skill">
                             <div class="label one-line">
-                                <p>Wordpress</p>
+                                <p>PROBLEM SOLVING</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 95%"></div>
+                                <div class="progress-bar" style="width: 90%"></div>
                             </div>
                         </div>
                         <div class="col-6 skill">
                             <div class="label one-line">
-                                <p>Python</p>
+                                <p>PROJECT MANAGEMENT</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 85%"></div>
+                                <div class="progress-bar" style="width: 80%"></div>
                             </div>
                         </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 skill">
-                            <div class="label one-line">
-                                <p>Training</p>
+                            <div class="label">
+                                <p>PHP & <br/>PYTHON</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 75%"></div>
+                                <div class="progress-bar" style="width: 70%"></div>
                             </div>
                         </div>
                         <div class="col-6 skill">
                             <div class="label">
-                                <p>Tensorflow & ML</p>
+                                <p>JAVASCRIPT: REACT & VUE</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
                                 <div class="progress-bar" style="width: 70%"></div>
@@ -226,18 +267,18 @@
                     <div class="row">
                         <div class="col-6 skill">
                             <div class="label">
-                                <p>Project Management</p>
+                                <p>TENSORFLOW & MACHINE LEARNING</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 65%"></div>
+                                <div class="progress-bar" style="width: 60%"></div>
                             </div>
                         </div>
                         <div class="col-6 skill">
-                            <div class="label">
-                                <p>Software Development</p>
+                            <div class="label one-line">
+                                <p>Java & C++</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 75%"></div>
+                                <div class="progress-bar" style="width: 40%"></div>
                             </div>
                         </div>
                         </div>
