--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="clear"></div>
                 <div>
                     <p>
-                    With over a decade experience working in a DevOps role, as both a project manager and a developer, I have a broad range of skills and talents to bring to your team. During my career I’ve taken the lead and delivered on all stages of a project lifecycle, including design/specification, software construction, testing and customer training. I’ve simultaneous managed 2 developer departments, acting as a project manager primarily for one team and as lead developer primarily for the other. What I’m looking for in my next role is to solve interesting problems and sharpen my development skills in a collaborative working environment among people who care about code. If that’s you and you’re looking for someone hardworking, pro-active and committed to making your projects a success then I think we should talk. I hope you do too.
+                        With over a decade experience working in a DevOps role, as both a project manager and full-stack developer, I have a broad range of skills and talents to bring to your team. During my career I’ve taken the lead and delivered on all stages of a project lifecycle, including design/specification, software construction, testing, documentation and customer training. I’ve simultaneous managed 2 developer departments, acting as a project manager for one team and as lead developer for the other. I’ve since moved into a head of development role. What I’m looking for in my next role is to take time out of management and take on a more technical role, working with people who care about code. If that’s you and you’re looking for someone hardworking, pro-active and committed to making your projects a success then I think we should talk. I hope you do too.
                     </p>
                 </div>
             </div>
@@ -144,6 +144,27 @@
                 <div class="container job">
                     <div class="row role">
                         <div class="col-4 title">
+                            <p>Head of Development</p>
+                        </div>
+                        <div class="col-8 company">
+                            <p>The Genius Group (TGG)</p>
+                        </div>
+                    </div>
+                    <div class="row summary">
+                        <div class="col-4 dates">
+                            <p>Jan. 2024-Present</p>
+                        </div>
+                        <div class="col-8 description">
+                            <p>Senior fullstack developer & project manager for a team of 5 developers.</p>
+                            <p>Working on high volume lead generation for primarily the legal industry in a fast paced environment.</p>
+                            <p>Tech stack is typescript, node, react and next.</p>
+                            <p>I also work on a content management system for law firms using Yii php framework.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container job">
+                    <div class="row role">
+                        <div class="col-4 title">
                             <p>Development Manager</p>
                         </div>
                         <div class="col-8 company">
@@ -152,7 +173,7 @@
                     </div>
                     <div class="row summary">
                         <div class="col-4 dates">
-                            <p>Nov. 2014-Present</p>
+                            <p>Nov. 2014-Jan. 2024</p>
                         </div>
                         <div class="col-8 description">
                             <p>Line manager for 2 departments:</p>
