--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="grid text-center">
                         <div class="g-col-3 hobbie">
                             <i class="fa-brands fa-js"></i>
-                            <p>Javascript</p>
+                            <p>Typescript & Javascript</p>
                         </div>
                         <div class="g-col-3 hobbie">
                             <i class="fa-brands fa-php"></i>
@@ -51,8 +51,6 @@
                             <p>Python</p>
                         </div>
                         <div class="g-col-3 hobbie">
-                            <i class="fa-brands fa-java"></i>
-                            <p>Java</p>
                         </div>
                     </div>
                 </div>
@@ -60,16 +58,16 @@
                     <h2>Frameworks</h2>
                     <div class="grid text-center">
                         <div class="g-col-3 hobbie">
-                            <i class="fa-brands fa-vuejs"></i>
-                            <p>Vue</p>
+                            <i class="fa-brands fa-node"></i>
+                            <p>Node</p>
                         </div>
                         <div class="g-col-3 hobbie">
                             <i class="fa-brands fa-react"></i>
                             <p>React</p>
                         </div>
                         <div class="g-col-3 hobbie">
-                            <i class="fa-brands fa-wordpress"></i>
-                            <p>Wordpress</p>
+                            <i class="fa-brands fa-vuejs"></i>
+                            <p>Vue</p>
                         </div>
                         <div class="g-col-3 hobbie">
                             <i class="fa-brands fa-laravel"></i>
@@ -128,7 +126,7 @@
                     <i class="fa-solid fa-circle-user"></i>
                 </div>
                 <div class="clear"></div>
-                <div>
+                <div class="">
                     <p>
                         With over a decade experience working in a DevOps role, as both a project manager and full-stack developer, I have a broad range of skills and talents to bring to your team. During my career I’ve taken the lead and delivered on all stages of a project lifecycle, including design/specification, software construction, testing, documentation and customer training. I’ve simultaneous managed 2 developer departments, acting as a project manager for one team and as lead developer for the other. I’ve since moved into a head of development role. What I’m looking for in my next role is to take time out of management and take on a more technical role, working with people who care about code. If that’s you and you’re looking for someone hardworking, pro-active and committed to making your projects a success then I think we should talk. I hope you do too.
                     </p>
@@ -249,7 +247,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-6 skill">
-                            <div class="label one-line">
+                            <div class="label">
                                 <p>PROBLEM SOLVING</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
@@ -257,7 +255,7 @@
                             </div>
                         </div>
                         <div class="col-6 skill">
-                            <div class="label one-line">
+                            <div class="label">
                                 <p>PROJECT MANAGEMENT</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
@@ -269,15 +267,15 @@
                     <div class="row">
                         <div class="col-6 skill">
                             <div class="label">
-                                <p>PHP & <br/>PYTHON</p>
+                                <p>TYPESCRIPT: REACT & VUE</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 70%"></div>
+                                <div class="progress-bar" style="width: 75%"></div>
                             </div>
                         </div>
                         <div class="col-6 skill">
-                            <div class="label">
-                                <p>JAVASCRIPT: REACT & VUE</p>
+                            <div class="label one-line">
+                                <p>PHP</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
                                 <div class="progress-bar" style="width: 70%"></div>
@@ -287,19 +285,19 @@
                     </div>
                     <div class="row">
                         <div class="col-6 skill">
-                            <div class="label">
-                                <p>TENSORFLOW & MACHINE LEARNING</p>
+                            <div class="label one-line">
+                                <p>PYTHON</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
                                 <div class="progress-bar" style="width: 60%"></div>
                             </div>
                         </div>
                         <div class="col-6 skill">
-                            <div class="label one-line">
-                                <p>Java & C++</p>
+                            <div class="label">
+                                <p>TENSORFLOW & ML</p>
                             </div>
                             <div class="progress" role="progressbar" aria0-label="Example 20px high" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="height: 20px">
-                                <div class="progress-bar" style="width: 40%"></div>
+                                <div class="progress-bar" style="width: 50%"></div>
                             </div>
                         </div>
                         </div>
